--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UTS ChatBot</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/utschatbot.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/utschatbot.css') }}">
 </head>
 <body>
     <div>
